--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -25,9 +25,12 @@
 
     <EditText
         android:id="@+id/graph_ET_formula"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="32dp"
+        android:background="@drawable/et_background"
         android:ems="10"
+        android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/graph_btn_draw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
