--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#C62828</color>
     <color name="orange">#FF6E40</color>
+    <color name="gray">#434343</color>
 </resources>
