--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalculateActivity"
-    tools:viewBindingIgnore="true">
+    tools:context=".CalculateActivity">
 
     <EditText
         android:id="@+id/calculate_et_formula"
