--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,14 @@
     <color name="red">#C62828</color>
     <color name="orange">#FF6E40</color>
     <color name="gray">#434343</color>
+    <color name="pink">#FF4081</color>
+
+
+
+
+    <color name="blac_shade_1">#292D36</color>
+    <color name="black_shade_2">#272B33</color>
+    <color name="black_shade_3">#22252D</color>
+    <color name="yellow">#ffa500</color>
+
 </resources>
